postgres-macros/tests/fail/extra_named.stderr
error: argument never used
 --> tests/fail/extra_named.rs:2:56
  |
2 |     sqlm_postgres_macros::sql!("{foo}", foo = 1, bar = 2);
  |                                                        ^
